# koala

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  LICENSE  README.md  SESSION.md  TODO.md  justfile  koala  rustfmt.toml
.claude/session-state/: active-state.md
.github/workflows/: miri.yml
KoalaBrowser/: Package.swift  run.sh
KoalaBrowser/Sources/KoalaBrowser/: BrowserView.swift  BrowserViewModel.swift  Info.plist  KoalaBrowserApp.swift  test_ffi.swift
KoalaBrowser/Sources/KoalaCore/: KoalaCore.swift
KoalaBrowser/Sources/KoalaCore/include/: koala.h  module.modulemap
KoalaBrowser/Sources/KoalaScreenshot/: main.swift
crates/boa/: Cargo.toml
crates/koala-browser/: Cargo.toml
crates/koala-browser/src/: font_metrics.rs  image_loader.rs  lib.rs  renderer.rs
crates/koala-browser/tests/: dom_bridge_tests.rs  renderer_letter_spacing.rs  script_loading.rs
crates/koala-common/: Cargo.toml
crates/koala-common/src/: alloc_count.rs  hosts.rs  image.rs  intern.rs  lib.rs  net.rs  url.rs  warning.rs
crates/koala-core/: Cargo.toml
crates/koala-core/src/: lib.rs
crates/koala-css/: Cargo.toml
crates/koala-css/src/: backgrounds.rs  layout.rs  lib.rs  ua_stylesheet.rs  vendor_prefixes.rs
crates/koala-css/src/cascade/: mod.rs
crates/koala-css/src/layout/: box_model.rs  flex.rs  float.rs  formatting_context.rs  grid.rs  inline.rs  layout_box.rs  mod.rs  positioned.rs  stacking.rs  table.rs  values.rs
crates/koala-css/src/paint/: display_list.rs  display_list_builder.rs  mod.rs  painter.rs
crates/koala-css/src/parser/: css_parser.rs  mod.rs  parser.rs
crates/koala-css/src/selector/: mod.rs
crates/koala-css/src/style/: computed.rs  display.rs  mod.rs  substitute.rs  values.rs  writing_mode.rs
crates/koala-css/src/style/values/: border.rs  color.rs  float.rs  font.rs  helpers.rs  length.rs  mod.rs  position.rs  text.rs
crates/koala-css/src/tokenizer/: css_tokenizer.rs  mod.rs  token.rs  tokenizer.rs
crates/koala-css/src/values/: mod.rs
crates/koala-css/tests/: cascade_tests.rs  layout_tests.rs  selector_tests.rs  style_tests.rs  tokenizer_tests.rs
crates/koala-debug/: Cargo.toml
crates/koala-dom/: Cargo.toml
crates/koala-dom/src/: lib.rs
crates/koala-dom/tests/: dom_mutation_tests.rs
crates/koala-html/: Cargo.toml
crates/koala-html/src/: lib.rs
crates/koala-html/src/parser/: core.rs  mod.rs  parser.rs
crates/koala-html/src/parser/foreign_content/: mathml.rs  mod.rs  svg.rs
crates/koala-html/src/tokenizer/: character_reference.rs  core.rs  helpers.rs  mod.rs  named_character_references.rs  token.rs  tokenizer.rs
crates/koala-html/tests/: named_character_references_tests.rs  parser_tests.rs  tokenizer_tests.rs
crates/koala-js/: Cargo.toml
crates/koala-js/src/: dom_handle.rs  lib.rs  scheduler.rs
crates/koala-js/src/globals/: console.rs  document.rs  dom_exception.rs  element.rs  element_class.rs  event_target_class.rs  events.rs  helpers.rs  interfaces.rs  location.rs  macros.rs  mod.rs  node_class.rs  selectors.rs  text.rs  timers.rs  window.rs
crates/koala-js/tests/: dependencies.rs  dom_bridge.rs  event_target.rs  timers.rs
crates/koala-js/tests/common/: mod.rs
crates/koala-std/: Cargo.toml
crates/koala-std/src/: lib.rs  raw.rs  raw_vec.rs  vec.rs
crates/koala-std/src/collections/: hash_map.rs  hash_set.rs  mod.rs  raw_table.rs
crates/koala-std/src/hash/: fx.rs  mod.rs
crates/koala-std/src/string/: fly.rs  mod.rs
crates/koala-std/src/vec/: mod.rs  raw_vec.rs
crates/koala-std/tests/: fly_string.rs  hash_fx_oracle.rs  hash_map.rs  hash_map_capacity.rs  hash_map_entry.rs  hash_map_iter.rs  hash_map_keys_values.rs  hash_map_lookup.rs  hash_map_remove.rs  hash_map_traits.rs  hash_set.rs  vec.rs
crates/koala-wpt/: Cargo.toml
crates/koala-wpt/src/: lib.rs  testharness.rs
crates/koala-wpt/tests/: reporter.rs  testharness.rs
dashboard/: .gitignore  observablehq.config.js  package-lock.json  package.json
dashboard/runs/: 2026-05-26T16-18-40_3b60711.json
dashboard/src/: areas.md  index.md  style.css  tests.md
dashboard/src/data/: results.parquet.py  runs.json.py
koala-cli/: Cargo.toml
koala-cli/src/: bench.rs  main.rs  render.rs  renderer.rs  wpt_protocol.rs
koala-cli/tests/: wpt_protocol_testharness.rs
koala-gui/: Cargo.toml
koala-gui/src/: main.rs  theme.rs
koala-qt/: .clangd  Cargo.toml  build.rs
koala-qt/cpp/: BrowserView.cpp  BrowserView.h  BrowserWindow.cpp  BrowserWindow.h  Icons.cpp  Icons.h  LocationEdit.cpp  LocationEdit.h  Tab.cpp  Tab.h  TabBar.cpp  TabBar.h  koala_window.cpp  koala_window.h
koala-qt/res/: error.html  landing.html
koala-qt/src/: bridge.rs  browser_page.rs  landing.rs  main.rs
koala-ui/: Cargo.toml  build.rs
koala-ui/res/: landing.html
koala-ui/src/: browser_page.rs  devhud.rs  error_page.rs  landing.rs  main.rs  tab_state.rs
koala-ui/ui/: devhud.slint  main.slint  tabs.slint
project-memory/: koala-std-flystring-design.md  koala-std-hashmap-design.md  koala-std-roadmap.md  koala-std-vec-design.md  rasterizer-future-work.md  render-pipeline-levers.md  wpt-integration-spec.md
project-memory/reviews/: T12-2026-04-12-architecture-review.md
res/: js-test.html  simple.html  test.html
src/: lib.rs
src/app/: application.rs
src/ffi/: mod.rs
src/lib_css/: layout.rs  mod.rs
src/lib_css/css_cascade/: mod.rs
src/lib_css/css_parser/: parser.rs
src/lib_css/css_selector/: mod.rs
src/lib_css/css_style/: mod.rs
src/lib_css/css_tokenizer/: tokenizer.rs
src/lib_dom/: mod.rs
src/lib_html/: mod.rs  token.rs  tokenizer.rs
src/lib_html/html_parser/: parser.rs
src/lib_html/html_tokenizer/: helpers.rs  mod.rs  token.rs  tokenizer.rs
wpt-tools/wptrunner-koala/: pyproject.toml
wpt-tools/wptrunner-koala/wptrunner_koala/: __init__.py  executorkoala.py  koala.py  summary.py  testharnessreport-koala.js
