[workspace]
resolver = "2"
members = [
    "crates/koala-dom",
    "crates/koala-html",
    "crates/koala-css",
    "crates/koala-core",
    "koala-cli",
    "koala-gui",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Internal crates
koala-dom = { path = "crates/koala-dom" }
koala-html = { path = "crates/koala-html" }
koala-css = { path = "crates/koala-css" }
koala-core = { path = "crates/koala-core" }

# External dependencies
anyhow = "1.0"
eframe = "0.29"
egui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.26"
strum_macros = "0.26"

[workspace.lints.rust]
# Treat these warnings as errors
unsafe_code = "deny"
missing_docs = "warn"
unused_results = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
# Correctness
correctness = { level = "deny", priority = -1 }

# Suspicious code
suspicious = { level = "warn", priority = -1 }

# Style
style = { level = "warn", priority = -1 }

# Complexity
complexity = { level = "warn", priority = -1 }

# Performance
perf = { level = "warn", priority = -1 }

# Pedantic (more opinionated)
pedantic = { level = "warn", priority = -1 }

# Specific overrides
module_name_repetitions = "allow"
too_many_lines = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
