[workspace]
resolver = "2"
members = [
    "crates/koala-common",
    "crates/koala-dom",
    "crates/koala-html",
    "crates/koala-css",
    "crates/koala-browser",
    "koala-cli",
    "koala-gui",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Internal crates
koala-common = { path = "crates/koala-common" }
koala-dom = { path = "crates/koala-dom" }
koala-html = { path = "crates/koala-html" }
koala-css = { path = "crates/koala-css" }
koala-browser = { path = "crates/koala-browser" }

# External dependencies
anyhow = "1.0"
owo-colors = "4"
eframe = "0.29"
egui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.26"
strum_macros = "0.26"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }

[workspace.lints.rust]
# All warnings as errors
unsafe_code = "deny"
missing_docs = "deny"
unused_results = "deny"
unused_qualifications = "deny"
rust_2024_compatibility = { level = "deny", priority = -1 }

[workspace.lints.clippy]
# Correctness - must fix
correctness = { level = "deny", priority = -1 }

# Suspicious code - must fix
suspicious = { level = "deny", priority = -1 }

# Style - must fix
style = { level = "deny", priority = -1 }

# Complexity - must fix
complexity = { level = "deny", priority = -1 }

# Performance - must fix
perf = { level = "deny", priority = -1 }

# Pedantic - must fix
pedantic = { level = "deny", priority = -1 }

# Nursery (experimental but useful)
nursery = { level = "warn", priority = -1 }

# Specific overrides for pragmatic reasons
module_name_repetitions = "allow"
too_many_lines = "allow"
