[workspace]
resolver = "2"
members = [
    "crates/koala-common",
    "crates/koala-dom",
    "crates/koala-html",
    "crates/koala-css",
    "crates/koala-js",
    "crates/koala-std",
    "crates/koala-wpt",
    "crates/koala-browser",
    "koala-cli",
    "koala-ui",
]
# Boa lives at `crates/boa/` as a nested workspace — its own
# `[workspace]` table stays intact so Boa's lints, profile, and
# inter-crate path deps don't have to be reconciled with Koala's.
# The `boa_engine` / `boa_gc` path entries below cross the
# boundary explicitly. Vendored from upstream v0.21.1; we expect
# to diverge over time.
exclude = ["crates/boa"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Fast, lightweight HTML-to-image renderer in Rust"

[workspace.dependencies]
# Internal crates
koala-common = { path = "crates/koala-common" }
koala-dom = { path = "crates/koala-dom" }
koala-html = { path = "crates/koala-html" }
koala-css = { path = "crates/koala-css" }
koala-js = { path = "crates/koala-js" }
koala-std = { path = "crates/koala-std" }
koala-wpt = { path = "crates/koala-wpt" }
koala-browser = { path = "crates/koala-browser" }

# External dependencies
anyhow = "1.0"
owo-colors = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.26"
strum_macros = "0.26"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
thiserror = "2"
boa_engine = { path = "crates/boa/core/engine" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry"] }

[workspace.lints.rust]
# All warnings as errors
unsafe_code = "deny"
missing_docs = "deny"
unused_results = "deny"
unused_qualifications = "deny"
rust_2024_compatibility = { level = "deny", priority = -1 }

[workspace.lints.clippy]
# Correctness - must fix
correctness = { level = "deny", priority = -1 }

# Suspicious code - must fix
suspicious = { level = "deny", priority = -1 }

# Style - must fix
style = { level = "deny", priority = -1 }

# Complexity - must fix
complexity = { level = "deny", priority = -1 }

# Performance - must fix
perf = { level = "deny", priority = -1 }

# Pedantic - must fix
pedantic = { level = "deny", priority = -1 }

# Nursery (experimental but useful)
nursery = { level = "warn", priority = -1 }

# Specific overrides for pragmatic reasons
module_name_repetitions = "allow"
too_many_lines = "allow"

# Release builds keep line-table debug info so `cargo flamegraph` (via
# dtrace on macOS) and other sampling profilers can resolve function
# symbols. ~5% binary size, no runtime cost. Without this, flamegraphs
# bottom out at `koala-cli::main` and aren't useful for hot-path triage.
[profile.release]
debug = "line-tables-only"
