[package]
name = "koala-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Command-line interface for the Koala browser"

[[bin]]
name = "koala-cli"
path = "src/main.rs"

[features]
layout-trace = ["koala-css/layout-trace"]

[dependencies]
libc = "0.2"
koala-browser.workspace = true
koala-dom.workspace = true
koala-html.workspace = true
koala-css.workspace = true
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
owo-colors.workspace = true

[lints]
workspace = true
