[package]
name = "koala-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Fast, lightweight HTML-to-image renderer in Rust"

[[bin]]
name = "koala"
path = "src/main.rs"

[features]
layout-trace = ["koala-css/layout-trace"]
# `--bench` mode and the `tracing-subscriber` Layer that drains the
# render-pipeline spans into per-stage stats. The spans themselves
# are always-on (cheap no-op when no subscriber is registered);
# only the harness module + its subscriber dep are gated behind
# this feature so non-bench builds stay light.
bench = ["dep:tracing-subscriber"]

[dependencies]
libc = "0.2"
koala-common.workspace = true
koala-browser.workspace = true
koala-dom.workspace = true
koala-html.workspace = true
koala-css.workspace = true
koala-wpt.workspace = true
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
owo-colors.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, optional = true }
koala-std.workspace = true

[lints]
workspace = true
