[package]
name = "koala-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GUI browser application for the Koala browser"

[[bin]]
name = "koala"
path = "src/main.rs"

[dependencies]
koala-common.workspace = true
koala-browser.workspace = true
koala-dom.workspace = true
koala-html.workspace = true
koala-css.workspace = true
eframe.workspace = true
egui.workspace = true
anyhow.workspace = true

[lints]
workspace = true
