[package]
name = "koala-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Development GUI for the Koala HTML renderer"

[[bin]]
name = "koala-gui"
path = "src/main.rs"

[dependencies]
koala-common.workspace = true
koala-browser.workspace = true
koala-dom.workspace = true
koala-html.workspace = true
koala-css.workspace = true
eframe.workspace = true
egui.workspace = true
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }

[lints]
workspace = true
