[package]
name = "koala-browser"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "High-level browser API for the Koala browser"

[dependencies]
koala-common.workspace = true
koala-dom.workspace = true
koala-html.workspace = true
koala-css.workspace = true
koala-js.workspace = true
anyhow.workspace = true
fontdue = "0.9"
image = "0.25"
resvg = "0.44"
usvg = "0.44"
tiny-skia = "0.11"

[lints]
workspace = true
