[package]
name = "koala-browser"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Document loading and rendering pipeline for the Koala renderer"

[dependencies]
koala-common.workspace = true
koala-dom.workspace = true
koala-html.workspace = true
koala-css.workspace = true
koala-js.workspace = true
anyhow.workspace = true
thiserror.workspace = true
# `tracing` is always linked: spans dispatch through a global
# dispatcher that's a no-op when no subscriber is registered (the
# GUI case), so per-frame overhead is ~tens of ns total across all
# active spans. Only the bench harness installs a subscriber; the
# rest of the time the spans cost nothing measurable.
tracing.workspace = true
fontdue = "0.9"
image = "0.25"
resvg = "0.44"
usvg = "0.44"
tiny-skia = "0.11"
koala-std.workspace = true

[lints]
workspace = true
