[package]
name = "koala-common"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared utilities for the Koala renderer"

[dependencies]
base64 = "0.22.1"
koala-std.workspace = true
reqwest.workspace = true
thiserror.workspace = true

[lints]
workspace = true
