[package]
name = "koala-css"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CSS tokenizer, parser, selector, and cascade for the Koala browser"

[dependencies]
koala-common.workspace = true
koala-dom.workspace = true
serde.workspace = true

[dev-dependencies]
koala-html.workspace = true

[lints]
workspace = true
