[package]
name = "koala-debug"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Diagnostic probes for the Koala renderer"
publish = false

# Home for diagnostic-only binaries. Each probe answers a single
# investigation question and is meant to be invoked through the
# `just probe-*` recipes; they're not part of any release path.
#
# Existing probes:
# - `oom-probe`  — drives `koala_browser::load_document` with a
#   span-by-span resident-set-size readout. Locates which
#   pipeline stage is allocating, and can install a
#   `MappedSender` to swap fetched URLs for local files.
# - `boa-isolate` — runs one or more JS files through a fresh
#   `JsRuntime` against an empty DOM, with wall-time + peak-RSS
#   reporting. Cheap minimal-repro tool for "does this script
#   misbehave in Boa on its own?"
#
# Add a new bin here when a follow-up probe is needed; don't
# inline new investigation tools into koala-cli or koala-js
# examples.

[[bin]]
name = "oom-probe"
path = "src/bin/oom_probe.rs"

[[bin]]
name = "boa-isolate"
path = "src/bin/boa_isolate.rs"

[dependencies]
koala-browser.workspace = true
koala-dom.workspace = true
koala-js.workspace = true
libc = "0.2"
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["registry"] }

[lints]
workspace = true
