[package]
name = "koala-html"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WHATWG-compliant HTML tokenizer and parser for the Koala renderer"

[dependencies]
koala-common.workspace = true
koala-dom.workspace = true
strum.workspace = true
strum_macros.workspace = true

[lints]
workspace = true
