[package]
name = "koala-js"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "JavaScript engine integration for the Koala renderer"

[dependencies]
koala-css.workspace = true
koala-dom.workspace = true
boa_engine.workspace = true
boa_gc = { path = "../boa/core/gc" }
koala-std.workspace = true

[lints]
workspace = true
