[package]
name = "koala-std"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Hand-rolled no_std + alloc foundation library for Koala — learning-motivated replacements for selected std types"

[dependencies]

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"

[lints]
workspace = true
