[package]
name = "koala-std"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Hand-rolled no_std + alloc foundation library for Koala — learning-motivated replacements for selected std types"

[dependencies]

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
# Correctness oracle for `koala_std::hash::FxHasher`. The differential
# test in `tests/hash_fx_oracle.rs` verifies our FxHasher is bit-
# identical to rustc-hash 2.x. Dev-only; never linked into the crate.
rustc-hash = "2"

[lints]
workspace = true
