[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "wptrunner-koala"
version = "0.1.0"
description = "wptrunner plugin that drives the koala browser via koala-cli --wpt-protocol"
requires-python = ">=3.9"
license = { text = "MIT OR Apache-2.0" }
dependencies = []

[project.entry-points."wptrunner.products"]
koala = "wptrunner_koala:load"

[tool.setuptools.packages.find]
include = ["wptrunner_koala*"]
